--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -266,7 +266,6 @@
     display: flex;
     margin-top: -30vh;
     margin-left: -20vh;
-    position: relative;
     width: 150vh;
     height: 90vh;
     top: 40vh;
@@ -306,17 +305,16 @@
     flex-direction: column;
     justify-content: center;
     text-align: left;
-    margin: auto;
     gap: 2px;
     padding: 50px;
     width: 60vh;
     height: 30vh;
     background: var(--branco);
     border-radius: 16px;
-    z-index: 100;
     font-size: 16px;
     bottom: 20vh;
     left: -48vh;
+    z-index: 100;
 }
 
 .caixaTexto3 {
@@ -364,18 +362,18 @@
 
     .estrela1 {
         position: absolute;
-        width: 100vh;
+        width: 45vw;
         height: 15vh;
         top: 20vh;
-        left: -30vh;
+        left: -15vw;
     }
 
     .estrela6 {
         position: absolute;
-        min-width: 90vh;
-        height: 3vh;
-        top: -10vh;
-        right: 10vh;
+        width: 40vw;
+        height: 3vw;
+        top: 5vh;
+        right: 2vw;
     }
 
     #nuvemSecao1 {
@@ -488,4 +486,8 @@
         right: -20%;
     }
 
+}
+
+@media (min-width: 1200px) {
+    
 }
