--- a/Frontend/src/Components/CaminhoAbelha/CaminhoAbelha.css
+++ b/Frontend/src/Components/CaminhoAbelha/CaminhoAbelha.css
@@ -1,16 +1,29 @@
+.tracinho {
+    width: 25px;
+    height: 4px;
+    background: #000;
+    border-radius: 2px;
+}
+
+.traços {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    transform: rotate(50deg);
+}
+
 .caminhoAbelha {
-    margin-top: -40%;
-    margin-left: -10%;
-    width: 80%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: visible;
+    position: absolute;
+    top: 4px;
 }
 
 .linhaAbelha {
-    position: relative;
     width: 0px;
     height: 4px;
     display: flex;
@@ -31,18 +44,6 @@
     opacity: 0.9;
     animation: caminho 2.5s ease-in-out infinite;
     animation-delay: calc(var(--i) * 0.15s);
-}
-
-.caminhoAbelha {
-    position: relative;
-    top: 80px;
-    left: 15%;
-    width: 90%;
-    height: 150%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: visible;
 }
 @keyframes caminho {
 
