--- a/Frontend/src/pages/Jogo/Jogo.css
+++ b/Frontend/src/pages/Jogo/Jogo.css
@@ -1,17 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
- 
-* {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body{
+body {
   background: linear-gradient(to top, #2155e0, #b0aed8);
 }
  
-.jogo-container {
+.jogoContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,7 +12,7 @@ body{
   overflow: hidden;
 }
  
-.Letras {
+.letras {
   background-color: aliceblue;
   margin-top: 20px;
   width: 600px;
@@ -31,12 +22,12 @@ body{
   z-index: 5;
 }
  
-.Letras p{
+.letras p{
   font-size: 22px;
   margin-bottom: -5px;
 }
  
-.input-container {
+.inputContainer {
   display: flex;
   gap: 10px;
   margin-top: 20px;
@@ -44,7 +35,7 @@ body{
   border-radius: 20px;
 }
  
-.input-field {
+.inputField {
   width: 40px;
   height: 45px;
   font-size: 20px;
@@ -54,7 +45,7 @@ body{
   box-shadow: 4px 3px black;
 }
  
-.submit-button {
+.submitButton {
   padding: 10px 20px;
   background-color: #1F2D7B;
   color: white;
@@ -67,37 +58,37 @@ body{
  
 }
  
-.submit-button:hover {
+.submitButton:hover {
   background-color: #111a4a;
 }
  
-.input-field.letra-correta {
+.inputField.letraCorreta {
   background-color: #c8f7c5;
   border: 2px solid #2ecc71;
 }
  
-.input-field.letra-correta {
+.inputField.letraCorreta {
   background-color: #c8f7c5;
   border: 2px solid #2ecc71;
 }
  
-.input-field.letra-incorreta {
+.inputField.letraIncorreta {
   background-color: #f7c5c5;
   border: 2px solid #e74c3c;
 }
  
-.feedback-img {
+.feedbackImg {
   width: 50px;
   height: 50px;
 }
  
-.feedback-imagem-container {
+.feedbackImagemContainer {
   display: flex;
   justify-content: center;
   align-items: center;
 }
  
-.feedback-img-overlay {
+.feedbackImgOverlay {
   position: absolute;
   bottom: 0;  
   left: 240px;  
@@ -108,7 +99,7 @@ body{
   z-index: 10;
 }
 
-.feedback-top {
+.feedbackTop {
   margin-top: 10px;
   text-align: center;
   font-weight: 600;
@@ -119,7 +110,7 @@ body{
 }
  
 
-.jogo-card {
+.jogoCard {
   display: flex;
   position: absolute;
   flex-direction: column;
@@ -128,7 +119,7 @@ body{
   z-index: 5;
 }
 
-.estrelas-bg {
+.estrelasBg {
   display: flex;
   position: absolute;
   width: 100%;
@@ -136,7 +127,7 @@ body{
   z-index: 10;
 }
  
-.nuvens-bg {
+.nuvensBg {
   display: flex;
   position: relative;
   width: 100%;
