--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -101,6 +101,8 @@
     animation: flutuarDireita 8s ease-in-out infinite alternate;
 }
 
+/* animação das nuvens */
+
 @keyframes flutuar {
     0% {
         transform: translateY(0);
@@ -196,11 +198,11 @@
     transform: scaleY(-1);
     width: 80%;
     height: 80%;
-    top: 85%;
+    top: 50%;
     left: -50vh;
 }
 
-#nuvemSecao5 {
+#nuvemSecao4 {
     display: flex;
     position: absolute;
     transform: scaleY(-1);
@@ -209,6 +211,18 @@
     height: 80%;
     right: -14vh;
     top: 55vh;
+}
+
+#nuvemSecao5 {
+    display: flex;
+    position: absolute;
+    transform: scaleY(-1);
+    transform: rotate(160deg);
+    top: 70vh;
+    width: 150%;
+    height: 65%;
+    left: -60vh;
+    right: 150vh;
 }
 
 #nuvemSecao6 {
@@ -223,7 +237,6 @@
     right: 150vh;
 }
 
-
 .paginaFada {
     background: linear-gradient(to bottom, #FFD4D1, #FFB3C8, #D97AA2);
     position: relative;
@@ -234,10 +247,10 @@
     justify-content: space-between;
     justify-items: center;
     align-items: center;
-    padding: 15rem 10rem;
+    padding: 10rem 10rem;
 }
 
-.teste {
+.siteApresentacao {
     position: relative;
 }
 
@@ -248,7 +261,7 @@
 
 #fadaPerfil2 {
     position: absolute;
-    top: 400vh;
+    top: 300vh;
     right: 25vh;
     width: 80vh;
     height: 40vh;
@@ -259,8 +272,8 @@
     position: absolute;
     width: 80vh;
     height: 40vh;
-    margin-left: 18vh;
-    margin-top: 70vh;
+    margin-left: -5%;
+    margin-top: -30%;
 }
 
 #decoracaoTexto img {
@@ -274,14 +287,14 @@
     display: flex;
     margin: -15% 5% 5%;
     width: 150vh;
-    height: 90vh; 
+    height: 90vh;
 }
 
 #decoracaoTexto3 {
     position: relative;
     width: 150vh;
     height: 100vh;
-    margin-top: 40vh;
+    margin-top: 80vh;
     right: -70vh;
 }
 
@@ -301,25 +314,24 @@
     z-index: 100;
     font-size: 16px;
     top: 0;
-    left: 0;;
+    left: 0;
 }
 
 .caixaTexto2 {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
     gap: 2px;
-    padding: 50px;
-    width: 60vh;
+    padding: 80px;
+    width: 70vh;
     height: 30vh;
     background: var(--branco);
     border-radius: 16px;
     font-size: 16px;
-    bottom: -25vh;
-    left: -50vh;
-    z-index: 0;
+    top: 90;
+    left: 0;
 }
 
 .caixaTexto3 {
@@ -331,13 +343,13 @@
     margin: auto;
     gap: 2px;
     padding: 50px;
-    width: 70vh;
-    height: 30vh;
+    width: 100%;
+    height: 50vh;
     background: var(--branco);
     border-radius: 16px;
     font-size: 16px;
-    top: 20vh;
-    right: -45vh;
+    top: 6vh;
+    right: -3vh;
 }
 
 .footer {
@@ -349,7 +361,7 @@
     width: 100%;
 }
 
-
+/* teste de responsividade para telas pequenas */
 @media (min-width: 660px) {
     .paginaPrincipal {
         padding: 1rem 10%
@@ -381,6 +393,7 @@
         right: 2vw;
     }
 
+
     #nuvemSecao1 {
         display: flex;
         position: absolute;
@@ -388,7 +401,7 @@
         left: -60vh;
         top: -25vh;
         width: 100%;
-        height: 110%;
+        height: 100%;
     }
 
     #nuvemSecao2 {
@@ -401,12 +414,54 @@
         height: 120%;
     }
 
+    #nuvemSecao4 {
+        display: flex;
+        position: absolute;
+        transform: scaleY(-1);
+        transform: rotate(180deg);
+        width: 50%;
+        height: 90%;
+        right: -14vh;
+        top: 50%;
+        z-index: 200;
+    }
+
+    #nuvemSecao5 {
+        display: flex;
+        position: absolute;
+        transform: scaleY(-1);
+        transform: rotate(150deg);
+        width: 150%;
+        height: 80%;
+        left: -75vh;
+        right: 150vh;
+        top: 70%;
+        z-index: 200;
+    }
+
+    #nuvemSecao6 {
+        display: flex;
+        position: absolute;
+        transform: scaleY(-1);
+        transform: rotate(160deg);
+        top: 60vh;
+        width: 150%;
+        height: 85%;
+        left: -150vh;
+        right: 150vh;
+        z-index: 200;
+    }
+
     #fadaPerfil {
         height: 40vh;
     }
 
     #fadaPerfil2 {
-        margin: -5% -5%;
+        margin: -35% -5%;
+    }
+
+    #fadaPerfil3 {
+        margin: 15% -5%;
     }
 
     #decoracaoTexto {
@@ -417,11 +472,19 @@
 
     #decoracaoTexto2 {
         display: flex;
-        margin: -20% -8%;
+        margin: -20% -25%;
         position: relative;
         width: 160vh;
         height: 100vh;
-        top: 20vh;
+        top: 5%;
+    }
+
+    #decoracaoTexto3 {
+        position: relative;
+        width: 150vh;
+        height: 120vh;
+        margin-top: -5%;
+        right: -50vh;
     }
 
     .caixaTexto {
@@ -436,7 +499,7 @@
         background: var(--branco);
         border-radius: 16px;
         z-index: 100;
-        font-size: 16px;
+        font-size: 14px;
         top: 50%;
         transform: translateY(-50%);
         left: 30%;
@@ -447,45 +510,31 @@
         flex-direction: column;
         justify-content: center;
         text-align: left;
-        margin: auto;
         gap: 2px;
         padding: 50px;
-        width: 70vh;
+        width: 80vh;
         height: 35vh;
         background: var(--branco);
         border-radius: 16px;
-        font-size: 16px;
-        margin: 8% 35%;
+        font-size: 14px;
+        left: 15%;
         z-index: 100;
     }
 
-    #decoracaoTexto3 {
-        position: relative;
-        width: 150vh;
-        height: 100vh;
-        margin-top: 20vh;
-        right: -70vh;
-    }
-
     .caixaTexto3 {
+        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
         text-align: left;
-        margin: auto;
         gap: 2px;
         padding: 50px;
-        width: 70vh;
-        height: 30vh;
+        min-width: 50%;
+        height: 25%;
         background: var(--branco);
         border-radius: 16px;
-        font-size: 16px;
-        top: -65vh;
-        right: -20%;
+        font-size: 14px;
+        top: -3vh;
+        right: 50vh;
     }
-
-}
-
-@media (min-width: 1200px) {
-    
 }
