--- a/Frontend/src/Components/Card-Jogo/Card.css
+++ b/Frontend/src/Components/Card-Jogo/Card.css
@@ -1,4 +1,4 @@
-.card3d {
+.card-3d {
   width: 300px;
   height: 360px;
   background: #ffffff;
@@ -14,7 +14,7 @@
   perspective: 1000px;
 }
 
-.cardContent {
+.card-content {
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -22,14 +22,14 @@
   height: 100%;
 }
 
-.cardImage {
+.card-image {
   width: 100%; /* Garante que a imagem ocupe toda a largura do card */
   height: auto; /* Mantém a proporção da imagem */
   object-fit: cover; /* Garante que a imagem cubra todo o espaço do card sem distorção */
   margin-top: 25px;
 }
 
-.cardTitle {
+.card-title {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
