--- a/Frontend/src/Components/HeaderLivro/HeaderLivro.css
+++ b/Frontend/src/Components/HeaderLivro/HeaderLivro.css
@@ -1,5 +1,5 @@
-/* Container do header do livro */
-.headerLivro {
+/* Container do header */
+.HeaderLivro {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -9,7 +9,7 @@
 }
 
 /* Botão voltar */
-.arrowButton {
+.ArrowButton {
   background-color: #fff;
   border: 2px solid black;
   color: black;
@@ -22,23 +22,23 @@
   transition: background 0.2s ease;
 }
 
-.arrowButton svg {
+.ArrowButton svg {
   width: 30px;
   height: 30px;
   transition: transform 0.3s;
 }
 
-.arrowButton:hover {
+.ArrowButton:hover {
   background-color: black;
   color: #fff;
 }
 
-.arrowButton:hover svg {
+.ArrowButton:hover svg {
   transform: scale(1.2);
 }
 
 /* Barras de pesquisa */
-.inputPalavra, .inputNum {
+.InputPalavra, .InputNum {
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -49,7 +49,7 @@
   width: fit-content;
 }
 
-.inputPalavra input {
+.InputPalavra input {
   padding: 0 1rem;
   border: none;
   outline: none;
@@ -57,7 +57,7 @@
   height: 50px;
 }
 
-.inputNum input {
+.InputNum input {
   padding: 0 1rem;
   border: none;
   outline: none;
@@ -65,11 +65,11 @@
   height: 50px;
 }
 
-.inputNum input::placeholder {
+.InputNum input::placeholder {
   color: #fff;
 }
 
-.searchButton {
+.SearchButton {
   background-color: #4B5B96;
   border: none;
   width: 60px;
@@ -81,41 +81,41 @@
   cursor: pointer;
 }
 
-.searchButton svg {
+.SearchButton svg {
   color: white;
   width: 26px;
   height: 26px;
   transition: transform 0.3s;
 }
 
-.searchButton:hover {
+.SearchButton:hover {
   background-color: #394470;
 }
 
-.searchButton:hover svg {
+.SearchButton:hover svg {
   transform: scale(1.2);
 }
 
-.inputNum p {
+.InputNum p {
   font-size: 13px;
   color: gray;
   padding: 0 1rem;
   pointer-events: none;
 }
 
-.numero {
+.Numero {
   background-color: #CC536F;
   text-align: center;
   border: none;
   transition: background 0.3s;
 }
 
-.numero:hover {
+.Numero:hover {
     background-color: #8b3247;
 }
 
 /* Marca texto */
-.pencilButton {
+.PencilButton {
   background-color: #4B5B96;
   border: 2px solid black;
   border-radius: 50%;
@@ -129,22 +129,25 @@
   box-shadow: 2px 3px black;
 }
 
-.pencilButton:hover {
+.PencilButton:hover {
   background-color: #394470;
 }
 
-.pencilButton svg {
+.PencilButton svg {
   width: 25px;
   height: 25px;
   color: white;
   transition: transform 0.2s;
 }
 
-.pencilButton:hover svg {
+.PencilButton:hover svg {
   transform: scale(1.2);
 }
 
 /* Retirar spinners do input de número */
 input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
+}
+input[type=number] {
+  -moz-appearance: textfield;
 }
